--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-﻿anyio==4.8.0
+anyio==4.8.0
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
 arrow==1.3.0
@@ -33,7 +33,6 @@ h11==0.14.0
 httpcore==1.0.7
 httpx==0.28.1
 idna==3.10
-ipykernel==6.29.5
 ipython==8.32.0
 ipywidgets==8.1.5
 isoduration==20.11.0
@@ -44,7 +43,6 @@ json5==0.10.0
 jsonpointer==3.0.0
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
-jupyter==1.1.1
 jupyter-console==6.6.3
 jupyter-events==0.12.0
 jupyter-lsp==2.2.5
@@ -68,7 +66,7 @@ nbformat==5.10.4
 nest-asyncio==1.6.0
 notebook==7.3.2
 notebook_shim==0.2.4
-numpy>=1.23.0
+numpy==1.26.4
 overrides==7.7.0
 packaging==24.2
 pandas==2.2.3
@@ -116,4 +114,3 @@ webcolors==24.11.1
 webencodings==0.5.1
 websocket-client==1.8.0
 Werkzeug==3.0.3
-widgetsnbextension==4.0.13
