--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ Flask==3.0.3
 Flask-SQLAlchemy==3.1.1
 fonttools==4.56.0
 fqdn==1.5.1
+gunicorn==21.2.0
 greenlet==3.2.0
 h11==0.14.0
 httpcore==1.0.7
